Page footer amended

--- a/templates/static.html
+++ b/templates/static.html
@@ -24,8 +24,7 @@
         </div>
       </div>
       <div class="well well-sm" id="footer">
-        &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a>
-        Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
+        &copy; 2017-2018 - dla <a href="http://pzbs.pl">PZBS</a> <a href="https://github.com/emkael/pzbs-ranking">zrobił</a> <a href="https://emkael.info">mkl.</a>
       </div>
     </div>
   </body>
