--- a/templates/player.html
+++ b/templates/player.html
@@ -73,8 +73,7 @@
         </tbody>
       </table>
       <div class="well well-sm">
-        &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a>
-        Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
+        &copy; 2017-2018 - dla <a href="http://pzbs.pl">PZBS</a> <a href="https://github.com/emkael/pzbs-ranking">zrobił</a> <a href="https://emkael.info">mkl.</a>
       </div>
     </div>
     <script type="text/javascript" src="../_res/jquery-2.2.4.min.js"></script>
