--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -257,8 +257,7 @@
         <div class="clearfix"></div>
       </div>
       <div class="well well-sm">
-        &copy; 2017 - dla <a href="http://pzbs.pl">PZBS</a> zrobił <a href="https://emkael.info">mkl.</a>
-        Też sobie <a href="https://github.com/emkael/pzbs-ranking">zrób.</a>
+        &copy; 2017-2018 - dla <a href="http://pzbs.pl">PZBS</a> <a href="https://github.com/emkael/pzbs-ranking">zrobił</a> <a href="https://emkael.info">mkl.</a>
         Dane w CSV <a href="https://raw.githubusercontent.com/emkael/pzbs-ranking/master/data/rankings" id="rawlink">tu.</a>
       </div>
     </div>
