--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -52,13 +52,7 @@
             </div>
             <div class="input-group" role="group">
               <div class="input-group-addon">Kat. wiekowa</div>
-              <div class="input-group-btn">
-                <button type="button" class="btn btn-default" data-filter="age" data-value="M">M</button>
-                <button type="button" class="btn btn-default" data-filter="age" data-value="J">J</button>
-                <button type="button" class="btn btn-default" data-filter="age" data-value="">-</button>
-                <button type="button" class="btn btn-default" data-filter="age" data-value="S">S</button>
-                <button type="button" class="btn btn-default" data-filter="age" data-value="N">N</button>
-                <button type="button" class="btn btn-default" data-clear="age">wszyscy</button>
+              <div class="input-group-btn" data-menu="age">
               </div>
             </div>
             <div class="input-group" role="group">
