Dynamic player pages from JSON datafiles

--- a/templates/player.html
+++ b/templates/player.html
@@ -78,5 +78,6 @@
     </div>
     <script type="text/javascript" src="../_res/jquery-2.2.4.min.js"></script>
     <script type="text/javascript" src="../_res/jquery.qtip.min.js"></script>
+    <script type="text/javascript" src="../_res/player.js"></script>
   </body>
 </html>
