--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -72,6 +72,7 @@
                     <button type="submit" class="btn btn-default" data-filter-action="name"
                             aria-label="Filtruj po imieniu/nazwisku">
                       <i class="glyphicon glyphicon-search"></i>
+                      szukaj
                     </button>
                     <button type="button" class="btn btn-default" data-clear="name">wyczyść</button>
                   </div>
@@ -87,6 +88,7 @@
                     <button type="submit" class="btn btn-default" data-filter-action="club"
                             aria-label="Filtruj po klubie">
                       <i class="glyphicon glyphicon-search"></i>
+                      szukaj
                     </button>
                     <button type="button" class="btn btn-default" data-clear="club">wyczyść</button>
                   </div>
